# lambda

./: Cargo.toml  LICENSE  dev-hx.sh  example.lambda  example.lbd  flake.nix  gen-hx-highlight.sh  gen-syntax.sh  readme.md  rust-toolchain.toml  zellij-layout.kdl
.direnv/: flake-profile-1-link  flake-profile-2-link
cst/: grammar.js  package-lock.json  package.json  pyproject.toml
cst/bindings/node/: binding.cc
cst/bindings/rust/: lib.rs
cst/queries/: highlights.scm
cst/src/: grammar.json  node-types.json  parser.c
src/: acceptance_tests.rs  ast.rs  diagnostics.rs  ir.rs  lib.rs  lsp.rs  main.rs  runtime.rs  source.rs  test_suite.rs  tests.rs  types.rs
src/ast/: arbitrary.rs  builder.rs  from_cst.rs  queries.rs
src/ir/: queries.rs
src/lsp/: utils.rs
src/types/: debug.rs
tests/: bool.md  call.md  def.md  if.md  let.md
tests/acceptance/: calling_bool.md  calling_bool_in_closure.md  calling_bool_in_fn.md  calling_bool_in_let.md  closure_call.md  closure_curry_call.md  closure_only.md  fn_call.md  fn_ret_tru.md  ident.md  infinite_let.md  infinite_recursion.md  infinite_type.md  let_poly.md  not_let_poly.md  poly_2.md  two_fn.md  undefined_var.md
tree-sitter-lambda/: Cargo.toml  Makefile  Package.swift  package.json  setup.py
tree-sitter-lambda/bindings/c/: tree-sitter-lambda.pc.in
tree-sitter-lambda/bindings/go/: binding_test.go  go.mod
tree-sitter-lambda/queries/: indents.scm  locals.scm  textobjects.scm
tree-sitter-lambda/src/: grammar.json
xtask/src/: fmt.rs  gen_syntax.rs  helix.rs  main.rs  review_tests.rs  test.rs  zellij.rs
(+3 files in other folders)
