[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "./cst"]

[dependencies]
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive", "env"] }
test-case = "3.3.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.22.6"
tree-sitter-lambda = { path = "./cst" }

[dev-dependencies]
arbtest = "0.3.1"
